Add setup.py Move building/uploading documentation to post and ignore step if it fails.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 max-line-length = 110
 ignore = E133, E226, E228, N802, N803, N806, W504
 exclude =
+  setup.py,
   bin,
   doc,
   **/*/__init__.py,
