--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,7 +1,7 @@
 {% set data= load_setup_py_data() %}
 package:
   name: ts-salkafka
-  version: {{ environ.get('GIT_DESCRIBE_TAG', 'default')}}
+  version: {{ data.get('version') }}
 
 source:
   git_url: https://github.com/lsst-ts/ts_salkafka
@@ -29,5 +29,6 @@ requirements:
     - setuptools
     - setuptools_scm
     - aiohttp
+    - psutil
     - ts-salobj
     - ts-idl
