--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,6 @@ exclude =
 [tool:pytest]
 addopts = --flake8
 flake8-ignore = E133 E226 E228 N802 N803 N806 W503
+
+[metadata]
+version = attr: setuptools_scm.get_version
