--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,11 +13,9 @@ build:
 
 test:
   requires:
-    - pytest
-    - pytest-flake8
-    - pytest-cov
-    - asynctest
-    - black
+    - ts-conda-build
+    - ts-idl {{ idl_version }}
+    - ts-salobj {{ salobj_version }}
 
 requirements:
   host:
