Update conda recipe.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -7,22 +7,21 @@ source:
   path: ../
 
 build:
-  noarch: generic
-  script: python -m pip install --no-deps --ignore-installed .
+  noarch: python
+  script: {{ PYTHON }} -m pip install --no-deps --ignore-installed .
   entry_points:
     - run_salkafka_producer = lsst.ts.salkafka:run_salkafka_producer
 
 requirements:
   host:
-    - python
+    - python {{ python }}
     - pip
-    - setuptools_scm
-    - setuptools
-    - pytest-runner
+    - setuptools_scm {{ setuptools_scm }}
+    - setuptools {{ setuptools }}
   run:
-    - python
-    - setuptools
-    - setuptools_scm
+    - python {{ python }}
+    - setuptools {{ setuptools }}
+    - setuptools_scm {{ setuptools_scm }}
     - aiohttp
     - psutil
     - ts-salobj
